2008-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Search/ForwardTextFileIterator.cs: Notify changes
	done in files. Fixes bug 434693 - Status icon doesn't update when
	find/replace is done.

2008-10-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/TextEditor.cs:
	* MonoDevelop.Ide.Gui.Content/CompletionTextEditorExtension.cs: Fixed
	'Bug 436669 - function hints (tooltip) hides typing when typing a
	multi-line function'.

2008-10-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Commands/DebugCommands.cs: Fix the build.

2008-10-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Commands/DebugCommands.cs:
	* MonoDevelop.Ide.Commands/ProjectCommands.cs: Disable the Run and Debug
	commands if the current solution or project can't be executed.

2008-10-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/RootWorkspace.cs:
	* MonoDevelop.Ide.Gui/ProjectOperations.cs: Disable the Run command if
	the current solution or project can't be executed.

2008-10-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.addin.xml: moved ambience extension node to project
	model.

2008-10-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.addin.xml: fixed 'Bug 399737 - Code completion busted
	for referenced assemblies that are not in GAC, are outside of the
	solution, and which are referenced by other non-GAC outside
	referenced assemblies'.

2008-10-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/TextEditor.cs: Added SearchChar function.

2008-10-27  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/Workbench.cs: Added gui lock/unlock events.

2008-10-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui.Content/CompletionTextEditorExtension.cs: fixed
	Bug 434717 - No completion for nullable types.

2008-10-22  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Components/NodeCommandHandler.cs: Done some